==========================================
http://www.springframework.org/osgi

Changes in version 1.1.0 RC1 (2008-0x-yy)
-----------------------------------------

General
* removed unused osgi-core.jar from bundle archetype

Package org.springframework.osgi.config
* fixed localization problem in xml enumeration conversion 
* fixed listener double invocation caused by JDK 5 bridge methods

Package org.springframework.osgi.service
* added descriptive exception when invoking non-public methods on class proxies (caused by classes with final mehtods)

Package org.springframework.osgi.web
* improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
* fixed problem with OsgiBundleXmlWebApplicationContext publishing null namespaces as OSGi properties
* DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header


Changes in version 1.1.0 M2 (2008-04-29)
-----------------------------------------

General
* Spring 2.5.4+ required
* upgraded to Felix 1.0.4
* refined the web deployer API
* split web functionality into web and web-extender (symbolic name:org.springframework.bundle.osgi.web.extender) bundle
* added integration with Spring MVC
* added 'greedy-proxying' attribute to reference collections (spring-osgi.xsd)
* reduced the number of class loader instances generated internally by Spring-DM
* improved proxy infrastructure to avoid type leaks or the usage of spring-aop dynamic import

Package org.springframework.osgi.config
* removed usage of deprecated setSource method in AbstractReferenceDefinitionParser
* added support for 'greedy-proxying' attribute

Package org.springframework.osgi.context
* added OSGi import for Spring property editors loaded reflectively
* improved loading of property editors by using Spring-DM core bundle instead of the target bundle
* AbstractOsgiBundleApplicationContext uses the raw bundle as the bean class loader to avoid class leaks